Update EncryptDecrypt.java